// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-bun-esm' > buildGetWasmModule-compiler-client-bun-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const _require = require

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-bun-esm' > buildGetWasmModule-compiler-client-bun-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const { createRequire } = await dynamicRequireFn('node:module')
    const _require = createRequire(import.meta.url)

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-bun-esm' > buildGetWasmModule-compiler-client-deno-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const _require = require

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-bun-esm' > buildGetWasmModule-compiler-client-deno-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const { createRequire } = await dynamicRequireFn('node:module')
    const _require = createRequire(import.meta.url)

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-bun-esm' > buildGetWasmModule-compiler-client-workerd-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const { createRequire } = await dynamicRequireFn('node:module')
    const _require = createRequire(import.meta.url)

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-workerd-cjs' > buildGetWasmModule-compiler-client-edge-light-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const _require = require

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-workerd-cjs' > buildGetWasmModule-compiler-client-edge-light-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const { createRequire } = await dynamicRequireFn('node:module')
    const _require = createRequire(import.meta.url)

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-workerd-cjs' > buildGetWasmModule-compiler-client-nodejs-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const _require = require

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-workerd-cjs' > buildGetWasmModule-compiler-client-nodejs-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const { createRequire } = await dynamicRequireFn('node:module')
    const _require = createRequire(import.meta.url)

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-client-workerd-cjs' > buildGetWasmModule-compiler-client-workerd-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.postgresql.mjs"),

  getQueryCompilerWasmModule: async () => {
    const dynamicRequireFn = async <const T extends string>(name: T) =>
      typeof globalThis.__non_webpack_require__ === 'function'
        ? Promise.resolve(globalThis.__non_webpack_require__(name))
        : await import(/* webpackIgnore: true */ /* @vite-ignore */ name)

    // Note: we must use dynamic imports here to avoid bundling errors like \`Module parse failed: Unexpected character '' (1:0)\`.
    const { readFile } = await dynamicRequireFn('node:fs/promises')
    const _require = require

    const wasmModulePath = _require.resolve("./query_compiler_bg.postgresql.wasm")
    const wasmModuleBytes = await readFile(wasmModulePath)

    return new globalThis.WebAssembly.Module(wasmModuleBytes)
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-bun-esm' > buildGetWasmModule-compiler-edge-bun-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-bun-esm' > buildGetWasmModule-compiler-edge-bun-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-bun-esm' > buildGetWasmModule-compiler-edge-deno-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-bun-esm' > buildGetWasmModule-compiler-edge-deno-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-bun-esm' > buildGetWasmModule-compiler-edge-workerd-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-workerd-cjs' > buildGetWasmModule-compiler-edge-edge-light-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-workerd-cjs' > buildGetWasmModule-compiler-edge-edge-light-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-workerd-cjs' > buildGetWasmModule-compiler-edge-nodejs-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-workerd-cjs' > buildGetWasmModule-compiler-edge-nodejs-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-edge-workerd-cjs' > buildGetWasmModule-compiler-edge-workerd-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-bun-esm' > buildGetWasmModule-compiler-library-bun-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-bun-esm' > buildGetWasmModule-compiler-library-bun-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-bun-esm' > buildGetWasmModule-compiler-library-deno-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-bun-esm' > buildGetWasmModule-compiler-library-deno-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-bun-esm' > buildGetWasmModule-compiler-library-workerd-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-workerd-cjs' > buildGetWasmModule-compiler-library-edge-light-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-workerd-cjs' > buildGetWasmModule-compiler-library-edge-light-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-workerd-cjs' > buildGetWasmModule-compiler-library-nodejs-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-workerd-cjs' > buildGetWasmModule-compiler-library-nodejs-esm.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-library-workerd-cjs' > buildGetWasmModule-compiler-library-workerd-cjs.ts 1`] = `"config.compilerWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-bun-esm' > buildGetWasmModule-compiler-wasm-compiler-edge-bun-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-bun-esm' > buildGetWasmModule-compiler-wasm-compiler-edge-bun-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-bun-esm' > buildGetWasmModule-compiler-wasm-compiler-edge-deno-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-bun-esm' > buildGetWasmModule-compiler-wasm-compiler-edge-deno-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-bun-esm' > buildGetWasmModule-compiler-wasm-compiler-edge-workerd-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-workerd-c…' > buildGetWasmModule-compiler-wasm-compiler-edge-edge-light-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm?module")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-workerd-c…' > buildGetWasmModule-compiler-wasm-compiler-edge-edge-light-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm?module")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-workerd-c…' > buildGetWasmModule-compiler-wasm-compiler-edge-nodejs-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-workerd-c…' > buildGetWasmModule-compiler-wasm-compiler-edge-nodejs-esm.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'compiler-wasm-compiler-edge-workerd-c…' > buildGetWasmModule-compiler-wasm-compiler-edge-workerd-cjs.ts 1`] = `
"config.compilerWasm = {
  getRuntime: async () => await import("./query_compiler_bg.js"),

  getQueryCompilerWasmModule: async () => {
    const { default: module } = await import("./query_compiler_bg.wasm")
    return module
  }
}"
`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-bun-esm' > buildGetWasmModule-engine-client-bun-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-bun-esm' > buildGetWasmModule-engine-client-bun-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-bun-esm' > buildGetWasmModule-engine-client-deno-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-bun-esm' > buildGetWasmModule-engine-client-deno-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-bun-esm' > buildGetWasmModule-engine-client-workerd-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-workerd-cjs' > buildGetWasmModule-engine-client-edge-light-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-workerd-cjs' > buildGetWasmModule-engine-client-edge-light-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-workerd-cjs' > buildGetWasmModule-engine-client-nodejs-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-workerd-cjs' > buildGetWasmModule-engine-client-nodejs-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-client-workerd-cjs' > buildGetWasmModule-engine-client-workerd-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-bun-esm' > buildGetWasmModule-engine-edge-bun-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-bun-esm' > buildGetWasmModule-engine-edge-bun-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-bun-esm' > buildGetWasmModule-engine-edge-deno-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-bun-esm' > buildGetWasmModule-engine-edge-deno-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-bun-esm' > buildGetWasmModule-engine-edge-workerd-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-workerd-cjs' > buildGetWasmModule-engine-edge-edge-light-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-workerd-cjs' > buildGetWasmModule-engine-edge-edge-light-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-workerd-cjs' > buildGetWasmModule-engine-edge-nodejs-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-workerd-cjs' > buildGetWasmModule-engine-edge-nodejs-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-edge-workerd-cjs' > buildGetWasmModule-engine-edge-workerd-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-bun-esm' > buildGetWasmModule-engine-library-bun-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-bun-esm' > buildGetWasmModule-engine-library-bun-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-bun-esm' > buildGetWasmModule-engine-library-deno-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-bun-esm' > buildGetWasmModule-engine-library-deno-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-bun-esm' > buildGetWasmModule-engine-library-workerd-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-workerd-cjs' > buildGetWasmModule-engine-library-edge-light-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-workerd-cjs' > buildGetWasmModule-engine-library-edge-light-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-workerd-cjs' > buildGetWasmModule-engine-library-nodejs-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-workerd-cjs' > buildGetWasmModule-engine-library-nodejs-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-library-workerd-cjs' > buildGetWasmModule-engine-library-workerd-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-bun-esm' > buildGetWasmModule-engine-wasm-compiler-edge-bun-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-bun-esm' > buildGetWasmModule-engine-wasm-compiler-edge-bun-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-bun-esm' > buildGetWasmModule-engine-wasm-compiler-edge-deno-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-bun-esm' > buildGetWasmModule-engine-wasm-compiler-edge-deno-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-bun-esm' > buildGetWasmModule-engine-wasm-compiler-edge-workerd-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-workerd-cjs' > buildGetWasmModule-engine-wasm-compiler-edge-edge-light-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-workerd-cjs' > buildGetWasmModule-engine-wasm-compiler-edge-edge-light-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-workerd-cjs' > buildGetWasmModule-engine-wasm-compiler-edge-nodejs-cjs.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-workerd-cjs' > buildGetWasmModule-engine-wasm-compiler-edge-nodejs-esm.ts 1`] = `"config.engineWasm = undefined"`;

exports[`buildGetWasmModule > generates valid TypeScript for: 'engine-wasm-compiler-edge-workerd-cjs' > buildGetWasmModule-engine-wasm-compiler-edge-workerd-cjs.ts 1`] = `"config.engineWasm = undefined"`;
